--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -1,5 +1,10 @@
 font = JetBrainsMono Nerd Font:size=16
 
+[colors]
+alpha=0.9
+foreground=ffffff
+background=000000
+
 [main]
 include=/usr/share/foot/themes/tokyonight-night
 # include=/usr/share/foot/themes/kanagawa
